--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 README - Distributed Assignment 1
 
-Nadav Yerushalmy - 204211056
+Nadav Yerushalmi - 204211056
 Elad Shabat - 305630014
 
 Steps to run the program:
